# ny-6

./: CMakeCache.txt  CMakeLists.txt  CPPSource.hpp  Command.hpp  Error.hpp  Gotos.hpp  Integer.hpp  LangVars.hpp  Makefile  Parser.hpp  PraeVars.hpp  ReadMe.md  StringCheck.hpp  Tokenizer.hpp  Variables.hpp  build.sh  cmake_install.cmake  main.cpp  pkgins.cfg  windows_build.sh
cmds/: Define.hpp  EqualsInt.hpp  EqualsString.hpp  FileSystem.h  IfDefInc.hpp  Input.hpp  Maths.hpp  Mov.hpp  Output.hpp  StringOps.hpp
objects/: Goto.hpp  PVariable.hpp  Parser.hpp  RealGoto.h  Scope.hpp  String.hpp  Tokenizer.hpp
pkg/: ins.sc
